[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Level/Heart.png" type="Texture" id=1]
[ext_resource path="res://Entities/DamageLabel.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ArialBlack.tres" type="DynamicFont" id=3]

[node name="DamageLabel" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
z_index = 14
script = ExtResource( 2 )

[node name="Number" type="Label" parent="."]
margin_left = -53.0
margin_top = -26.0
margin_right = -3.8147e-06
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "-10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category" type="Sprite" parent="."]
position = Vector2( 20, -1 )
texture = ExtResource( 1 )

[node name="PosTween" type="Tween" parent="."]

[node name="VisTween" type="Tween" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="HalfTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="HalfTimer" to="." method="_on_HalfTimer_timeout"]
